@@ -1,3 +1,8 @@
+2008-10-15  Marius Vollmer  <marius.vollmer@nokia.com>
+
+	* src/apt-worker.cc (mark_for_install_1): Continue if MarkInstall
+	leaves a package in MarkKeep.
+
 2008-10-10  Marius Vollmer  <marius.vollmer@nokia.com>
 
 	Released 2.1.17
